--- a/src/pages/profile/profile.component.html
+++ b/src/pages/profile/profile.component.html
@@ -1,13 +1,24 @@
 <nav class="nav-side nav-side-blue nav-side-lg nav-left nav-fixed">
-    <div class="logo-container t-center">
-        <div class="picture picture-lg" [ngStyle]="{'background-image':'url(http://kingofwallpapers.com/happy/happy-007.jpg)'}"></div>
-        <p class="big">Valdemar Rolfsen</p>
+  <div class="logo-container t-center">
+    <div class="picture picture-lg"
+         [ngStyle]="{'background-image':'url(' + baseUrl + user?.profile_picture + ')'}">
+      <input *ngIf="options.url" class="file-input" type="file" [ng-file-select]="options" (onUpload)="handleDropUpload($event)">
+      <div class="edit-filter">Endre bildet</div>
     </div>
-    <div (click)="navigate('')" class="nav-item"><span class="fa fa-user"></span><span class="item-text">Generelt</span></div>
-    <div (click)="navigate('payment')" class="nav-item active"><span class="fa fa-credit-card"></span><span class="item-text">Betalingsinformasjon</span>
-    </div>
-    <div (click)="navigate('time')" class="nav-item"><span class="fa fa-clock-o"></span><span class="item-text">Timer</span></div>
-    <div (click)="navigate('invite')" class="nav-item"><span class="fa fa-share-alt"></span><span class="item-text">Inviter venner</span></div>
-    <div (click)="navigate('')" class="nav-item"><span class="fa fa-sign-out"></span><span class="item-text">Logg ut</span></div>
+    <p class="fs-16 m-l-20-0 m-top">{{user?.first_name}} {{user?.last_name}}</p>
+  </div>
+  <div (click)="navigate(['front', ''])" class="fs-13 p-l-0-20 bg-green hover-green"><span class="fa fa-chevron-left"></span><span class="item-text">Tilbake</span>
+  </div>
+  <div (click)="navigate(['profile', ''])" class="nav-item"><span class="fa fa-user"></span><span class="item-text">Generelt</span>
+  </div>
+  <div (click)="navigate(['profile', 'payment'])" class="nav-item active"><span class="fa fa-credit-card"></span><span
+    class="item-text">Betalingsinformasjon</span>
+  </div>
+  <div (click)="navigate(['profile', 'time'])" class="nav-item"><span class="fa fa-clock-o"></span><span
+    class="item-text">Timer</span></div>
+  <div (click)="navigate(['profile', 'invite'])" class="nav-item"><span class="fa fa-share-alt"></span><span class="item-text">Inviter venner</span>
+  </div>
+  <div (click)="navigate(['profile', ''])" class="nav-item"><span class="fa fa-sign-out"></span><span
+    class="item-text">Logg ut</span></div>
 </nav>
 <router-outlet></router-outlet>
