--- a/src/css/appointment.component.css
+++ b/src/css/appointment.component.css
@@ -84,4 +84,17 @@
     .rating-stars li:hover {
       color: #fc797c; }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+.loading {
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  border: 0.25rem solid rgba(252, 121, 124, 0.2);
+  border-top-color: #fc797c;
+  animation: spin 750ms infinite linear; }
+
 /*# sourceMappingURL=appointment.component.css.map */
