--- a/src/css/myjobs.component.css
+++ b/src/css/myjobs.component.css
@@ -1,4 +1,17 @@
 .fill-rest {
   flex: 1; }
 
+.appointments-container {
+  position: absolute;
+  top: 100px;
+  left: 500px;
+  right: 0;
+  bottom: 0; }
+
+.job-header {
+  position: absolute;
+  top: 0;
+  left: 500px;
+  right: 0; }
+
 /*# sourceMappingURL=myjobs.component.css.map */
