--- a/src/pages/front/appointment/appointment.component.scss
+++ b/src/pages/front/appointment/appointment.component.scss
@@ -128,3 +128,25 @@ $bulletpointSize: 1.2em;
     }
   }
 }
+
+$base-line-height: 24px;
+$off-primary: rgba($primary, 0.2);
+$spin-duration: 750ms;
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  border-radius: 50%;
+  width: $base-line-height;
+  height: $base-line-height;
+  border: .25rem solid $off-primary;
+  border-top-color: $primary;
+  animation: spin $spin-duration infinite linear;
+}
