--- a/src/pages/front/myappointments/myappointments.component.html
+++ b/src/pages/front/myappointments/myappointments.component.html
@@ -2,7 +2,7 @@
   <div class="c-m-4 bg-light border-r-1 border-stable center-shadow">
     <div class="row view-height">
       <div class="c-l-12">
-        <div class="row row-center row-center-v h-100 border-b-1 border-stable bg-stable-light">
+        <div class="row row-center row-center-v h-100 border-b-1 border-stable">
           <h4>Vurderinger</h4>
         </div>
       </div>
